[UPD] Improved TetrisPieceService rotating logic